--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,8 @@
 
 /* ---- Base Rules ---- */
 body {
-    background: rgb(136,203,171);
-    background: linear-gradient(0deg, rgba(136,203,171,1) 0%, rgba(0,13,60,1) 100%);
+    background: rgb(0,0,0);
+    background: linear-gradient(0deg, rgba(153,0,0) 0%, rgba(0,13,60,1) 100%);
     margin: 0;
     font-family: 'Merriweather', serif;
     color: #fff;
@@ -34,9 +34,14 @@ h1 {
 }
 
 h2 {
-    border-bottom: 1px solid #cc1;
     font-family: 'Oxygen', Sans-Serif;
     font-size: 3em;
+    color: #fff;
+}
+
+h3{
+    border-bottom: 1px solid #cc1;
+    font-size: 2.5em;
     color: #fff;
 }
 
@@ -61,7 +66,7 @@ section {
 }
 
 .active {
-    color: rgb(238, 34, 34);
+    color: rgb(249,249,8);
 }
 
 /* ---- Module Rules ---- */
@@ -104,8 +109,9 @@ section {
 /* Footer Styles */
 .page__footer {
     background: #000;
-    padding: 3em;
+    padding: 3px;
     color: #fff;
+    text-align: center;
 }
 
 .page__footer p{
@@ -198,8 +204,8 @@ section:nth-of-type(3n + 1) .landing__container::after {
 /* Section Active Styles */
 /* Note: your-active-class class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
 section.your-active-class {
-    background: rgb(0, 0, 0);
-    background: linear-gradient(0deg, rgba(255, 0, 0, 0.5) 0%, rgba(255, 0, 0, 0) 100%);
+   
+    background: linear-gradient(0deg, rgba(0,204,204, 0.5) 0%, rgba(0,204,204, 0) 100%);
 }
 
 section.your-active-class .landing__container::before {
@@ -224,4 +230,20 @@ section.your-active-class .landing__container::after {
 		           translate(-1em) 
 		           rotate(-360deg);
 	}
+}
+
+.bookshelf{
+    display: flex;
+    align-items: center;
+    justify-content: left;
+}
+.face-pic{
+    height: 20vw;
+    vertical-align: middle;
+    margin-bottom: 0.75em;
+}
+.facepic-align{
+    display: flex;
+    align-items: center;
+    justify-content: left;
 }
